    - Fixed filtering bug in AbstractSimpleContainer and flaw in SimpleContainer
    - Allow SpringXSLUpdateTransformConfigurer to configure the TransformerFactory
    - Added IdGenerator.checkId() allowing to read but not assign an object's ID
    - Disallow forward references in ParseUtil.serializeReference (as documented)

Version 1.0.432 Released June 29, 2012

    - SpringContextApplication: add "vaadinContextConfigLocation" init param
    - Fix NotSerializableException in ContextApplication (issue #9)
    - Catch Spring's EmptyResultDataAccessException as well in AbstractDAO
    - Have ContextApplication implement Executor
    - Update vaadin7 package for 7.0.0.alpha3

Version 1.0.420 Released June 9, 2012

    - Added Vaadin 7 versions of Vaadin classes that require change
    - Changed IdGenerator to re-use the same instance on re-entrant invocation;
      NOTE: backward-incompatible change.
    - Added new Container classes, PropertyExtractor, and sorting to PropertyDef
    - Added VaadinApplicationListener.addAsListenerTo()
    - Added AtomicUpdateFileOutputStream and {,File}StreamRepository
    - Added AbstractDAO.contains()
    - Added PropertyDef.cast()
    - Added ThreadLocalHolder

Version 1.0.349 Released April 27, 2012

    - Fixed issue with circular autowiring dependencies that include the
      SpringContextApplication bean; this also eliminates the requirement
      to create custom static get() method in subclass (issue #7)
    - Removed deprecated ContextApplicationFactoryBean
    - Added @PostCompletionSupport Spring annotation
    - Added SpringXSLPersistentObjectSchemaUpdate.setTransformerFactory()
    - Added support for "empty stops" in PersistentObject
    - Fix possible ClassCastException in JiBXUtil.readObject()
    - Fix bug in PersistentObject when numBackups == 1
    - Added some enhancements to PropertyDef
    - Added AbstractConfiguredBean

Version 1.0.315 Released March 26, 2012

    - Added CSVWriter